[tool.poetry]
name = "sparkpi"
version = "0.1.0"
description = ""
authors = ["Kimberly <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.10"
lineno = "^0.3.0"

[tool.poetry.group.dev.dependencies]
pytest = "^6.2"
dbx = "^0.8.14"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
run = "sparkpi.sparkPi:entry"